#54 Fix compiling issues.
- Missing factory call params
- Make assisted factory parameter types unique by adding names to @Assisted